[package]
name = "luabutt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
buttplug = { version = "8.0.0", default-features = false, features = [ "tokio-runtime", "client", "serialize-json", "websockets" ] }
tokio = { version = "1.38.0", features = [ "rt-multi-thread", "sync" ] }
mlua = { version = "0.10.3", features = [ "lua54", "module" ] }
futures = { version = "0.3.31" }
